--- a/public/assets/css/colors.css
+++ b/public/assets/css/colors.css
@@ -2,7 +2,7 @@
 .color-green-1{
   color: #1F4E5A;
 }
-.color-green-1{
+.color-green-2{
   color: #009C8E;
 }
 .color-yellow{
@@ -11,8 +11,8 @@
 .color-orange-1{
   color: #FFDB6A;
 }
-.color-orange-1{
-  color: #FFDB6A;
+.color-orange-2{
+  color: #ea5f40;
 }
 .color-white{
   color: #FFFFFF;
@@ -21,7 +21,7 @@
 .background-green-1{
   background: #1F4E5A;
 }
-.background-green-1{
+.background-green-2{
   background: #009C8E;
 }
 .background-yellow{
@@ -30,6 +30,6 @@
 .background-orange-1{
   background: #FFDB6A;
 }
-.background-orange-1{
-  background: #FFDB6A;
+.background-orange-2{
+  background: #ea5f40;
 }
